objects/CMPL123CME__Complaint__c.object
<CustomObject>
    <fields>
        <fullName>BMX_SIG_Code__c</fullName>
        <label>SIG Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>AS01</fullName>
                    <label>AS01 - bioNexia Shangaï</label>
                </value>
                <value>
                    <fullName>EU01</fullName>
                    <label>EU01 - COMPLAINT FIRENZE</label>
                </value>
                <value>
                    <fullName>EU03</fullName>
                    <label>EU03 - COMPLAINT CRAPONNE</label>
                </value>
                <value>
                    <fullName>EU04</fullName>
                    <label>EU04 - CQ LBM</label>
                </value>
                <value>
                    <fullName>EU05</fullName>
                    <label>EU05 - SMQ LBM</label>
                </value>
                <value>
                    <fullName>EU06</fullName>
                    <label>EU06 - COMPLAINT MADRID</label>
                </value>
                <value>
                    <fullName>EU07</fullName>
                    <label>EU07 - GSS MICROBIO</label>
                </value>
                <value>
                    <fullName>EU08</fullName>
                    <label>EU08 - GSS IMMUNO</label>
                </value>
                <value>
                    <fullName>EU09</fullName>
                    <label>EU09 - CSI MARCY</label>
                </value>
                <value>
                    <fullName>EU11</fullName>
                    <label>EU11 - COMPLAINT GRENOBLE</label>
                </value>
                <value>
                    <fullName>EU12</fullName>
                    <label>EU12 - COMPLAINT RIO</label>
                </value>
                <value>
                    <fullName>EU13</fullName>
                    <label>EU13 - COMPLAINT AB BIODISKS</label>
                </value>
                <value>
                    <fullName>EU14</fullName>
                    <label>EU14 - COMPLAINT SYSMEX</label>
                </value>
                <value>
                    <fullName>EU15</fullName>
                    <label>EU15 - COMPLAINT BTF</label>
                </value>
                <value>
                    <fullName>EU16</fullName>
                    <label>EU16 - Global System Support Molecular</label>
                </value>
                <value>
                    <fullName>EU17</fullName>
                    <label>EU17 - VERNIOLLE</label>
                </value>
                <value>
                    <fullName>EU18</fullName>
                    <label>EU18 - COMBOURG REAGENT</label>
                </value>
                <value>
                    <fullName>EU19</fullName>
                    <label>EU19 - SAINT BRIEUC</label>
                </value>
                <value>
                    <fullName>EU20</fullName>
                    <label>EU20 - THIRD PARTY LBM</label>
                </value>
                <value>
                    <fullName>EU21</fullName>
                    <label>EU21 - BERNRIED - Germany</label>
                </value>
                <value>
                    <fullName>EU22</fullName>
                    <label>EU22 - COMBOURG EQUIPMENT</label>
                </value>
                <value>
                    <fullName>NA01</fullName>
                    <label>NA01 - QA DURHAM</label>
                </value>
                <value>
                    <fullName>NA02</fullName>
                    <label>NA02 - QA ST LOUIS</label>
                </value>
                <value>
                    <fullName>NA03</fullName>
                    <label>NA03 - QA LOMBARD</label>
                </value>
                <value>
                    <fullName>NA04</fullName>
                    <label>NA04 - GSS BACT/ALERT</label>
                </value>
                <value>
                    <fullName>NA05</fullName>
                    <label>NA05 - GSS VITEK</label>
                </value>
                <value>
                    <fullName>NA06</fullName>
                    <label>NA06 - CSI ST LOUIS</label>
                </value>
                <value>
                    <fullName>NA09</fullName>
                    <label>NA09 - SALT LAKE CITY</label>
                </value>
                <value>
                    <fullName>NA10</fullName>
                    <label>NA10 - LAVAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_SalesOrderNumber__c</fullName>
        <label>Sales Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Satisfaction_External__c</fullName>
        <label>Satisfaction</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Satisfaction__c</fullName>
        <label>Satisfaction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Serial_Number_Asset__c</fullName>
        <label>Serial Number (Asset)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_to_Location_SAP_Number__c</fullName>
        <label>Ship-to Location SAP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Ship_to_Location__c</fullName>
        <label>Ship-to Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Sub_Origin__c</fullName>
        <label>Sub Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Subject__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SuppliedCompany__c</fullName>
        <label>Web Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SuppliedName__c</fullName>
        <label>Web Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SuppliedPhone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_System__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TECHSAPAssetNumber__c</fullName>
        <label>SAP Asset Number (Offline)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TECHSerialNumber__c</fullName>
        <label>Serial Number (Offline)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TGA_Due_Date__c</fullName>
        <label>TGA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_TGA_Report_Type__c</fullName>
        <label>TGA Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TWComplaintNumber__c</fullName>
        <label>TW Complaint Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TWComplaintState__c</fullName>
        <label>TW Complaint State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_TakenActionsDetails__c</fullName>
        <label>Taken Actions Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_TechAdditionaLInfo__c</fullName>
        <label>Technical Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_UDI_Code__c</fullName>
        <label>UDI-DI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Visitor_Address_Name__c</fullName>
        <label>Visitor Address Name</label>
        <length>18</length>
        <referenceTo>Location__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Visitor_State__c</fullName>
        <label>Visitor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Was_Escalated__c</fullName>
        <label>Was Escalated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Was_Escalated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Escalated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_eMDR_Due_Date__c</fullName>
        <label>eMDR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_eMDR_Report_Type__c</fullName>
        <label>eMDR Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_isAORtech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AORtech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Actual_Risk_Rating__c</fullName>
        <label>Actual Risk Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Adverse_Event_Product_Problem__c</fullName>
        <description>Adverse Event/Product Problem</description>
        <label>Adverse Event/Product Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Body_Function_Impairment__c</fullName>
        <description>Body Function Impairment(Patient )</description>
        <label>Body Function Impairment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Body_Structure_Damage__c</fullName>
        <description>Body Structure Damage</description>
        <label>Body Structure Damage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Business_Risk__c</fullName>
        <description>Business Risk</description>
        <label>Business Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CAPA_Determination__c</fullName>
        <label>CAPA Determination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ComplaintUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Catalog_No__c</fullName>
        <label>Catalog No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Compliance_Risk__c</fullName>
        <label>Compliance Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Concomitant_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concomitant Products</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Create_CAPA_Externally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create CAPA Externally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Create_CC_Externally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create CC Externally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Complaints_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Closed__c</fullName>
        <description>Closed Date</description>
        <inlineHelpText>Closed Date</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Due__c</fullName>
        <label>Date Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Return_Requested__c</fullName>
        <label>Date Return Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Departments__c</fullName>
        <label>Departments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Disability__c</fullName>
        <label>Disability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Due_Date_Count__c</fullName>
        <formula>IF(CMPL123CME__Date_Closed__c &lt;  CMPL123CME__Date_Due__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Duration_of_Use__c</fullName>
        <label>Duration of Use</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__End_Date_of_Use__c</fullName>
        <label>End Date of Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Error_ID__c</fullName>
        <label>Error ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_Description__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_ID_CAPA__c</fullName>
        <label>External ID (CAPA)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_ID_CC__c</fullName>
        <label>External ID (CC)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_Workflow_Action_Performed_By__c</fullName>
        <label>External Workflow Action Performed By</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_Workflow_Action_Performed_On__c</fullName>
        <label>External Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Form__c</fullName>
        <description>TBD</description>
        <label>Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Health_Risk__c</fullName>
        <description>Health Risk</description>
        <label>Health Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Immediate_Actions__c</fullName>
        <label>Immediate Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Impact_Analysis__c</fullName>
        <description>Impact Analysis</description>
        <label>Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Impact__c</fullName>
        <description>Impact</description>
        <label>Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Report_Date_and_Time__c</fullName>
        <label>Initial Report Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Reporter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Integration_ID__c</fullName>
        <label>Integration ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MDR report creation</description>
        <label>MDR Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Status__c</fullName>
        <label>MDR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Material__c</fullName>
        <label>Material</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Message_ID__c</fullName>
        <label>Message ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Non_Trivial_Medication_Surgery__c</fullName>
        <description>Non-Trivial Medication/Surgery</description>
        <label>Non-Trivial Medication/Surgery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Contacts__c</fullName>
        <label>Other Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Outcome_Specify__c</fullName>
        <label>Other Outcome - Specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Outcome__c</fullName>
        <description>Other Outcome</description>
        <label>Other Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Relevant_History__c</fullName>
        <description>Other Relevant History</description>
        <label>Other Relevant History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Reportable_Countries__c</fullName>
        <label>Other Reportable Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Outcomes_attributed_to_AE__c</fullName>
        <description>Outcomes attributed to AE</description>
        <label>Outcomes attributed to AE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Family_History__c</fullName>
        <description>Patient Family History</description>
        <label>Patient Family History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Medical_History__c</fullName>
        <label>Patient Medical History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123__Contact__c.CMPL123__Contact_Type__c</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Complaints_Patient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Probablity_Measure__c</fullName>
        <label>Probability Measure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Complaints_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Related_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Inquiry</label>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_Type__c</fullName>
        <label>Reporter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Risk_Analysis__c</fullName>
        <description>Risk Analysis</description>
        <label>Risk Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Severity_Measure__c</fullName>
        <description>Severity Measure</description>
        <label>Severity Measure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Short_Description__c</fullName>
        <description>Short Description</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Supervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Symptom_Codes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symptom Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>SYMPTOM CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Complaints (Symptom Codes)</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Timeliness_Justification__c</fullName>
        <label>Timeliness Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Device Malfunction</fullName>
                </value>
                <value>
                    <fullName>Shipment Error</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <defaultValue>"Complaint"</defaultValue>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Has_WO__c</fullName>
        <label>Case Has WO ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Profile_Code__c</fullName>
        <formula>LEFT(TEXT( BMX_Catalog_Profile__c ),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalog Profile Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <label>Complaint Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Complaint Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complete_Investigation_By__c</fullName>
        <label>Complete Investigation By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Investigation_Date__c</fullName>
        <label>Complete Investigation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Concomitant_Devices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concomitant Devices</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Complaints (Concomitant Devices)</relationshipLabel>
        <relationshipName>Complaints1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_type__c</fullName>
        <description>Customer type of the Case</description>
        <label>Customer type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Name</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Serial_Number__c</fullName>
        <label>Device Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Complaints (Device)</relationshipLabel>
        <relationshipName>Complaints3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <label>Entitlement ID</label>
        <length>18</length>
        <referenceTo>Entitlement__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Completed_By__c</fullName>
        <label>Evaluation Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Completed_Date__c</fullName>
        <label>Evaluation Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>File_Attachments__c</fullName>
        <formula>HYPERLINK($Setup.External_Files_Viewer_Config__c.Base_URL__c &amp; "/app?id=" &amp; Id,"Click to view files")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INV_Reference_Creation_Justification__c</fullName>
        <description>Investigation Reference Creation Justification</description>
        <inlineHelpText>This Justification is mandatory when you select an existing record in "MAster Investigation" to justify why the Investigations are similar.</inlineHelpText>
        <label>INV Reference Creation Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_reason_for_the_non_complaint_st__c</fullName>
        <label>If no, reason for the non-complaint st</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>